@@ -217,7 +217,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <jvmArguments>--enable-preview --add-opens=java.base/javax.crypto.spec=ALL-UNNAMED</jvmArguments>
+                    <jvmArguments>--enable-preview</jvmArguments>
                 </configuration>
 
             </plugin>
@@ -454,7 +454,7 @@
                     <skipCheckoutIfExists>false</skipCheckoutIfExists>
                     <connectionUrl>scm:git:https://github.com/pagopa/pagopa-ecommerce-commons.git</connectionUrl>
                     <scmVersionType>branch</scmVersionType>
-                    <scmVersion>confidential-email</scmVersion>
+                    <scmVersion>confidential-email-transaction-service-integration</scmVersion>
                     <goals>install -DskipTests</goals>
                 </configuration>
                 <executions>
